--- a/clusters/cdd-demo-aws/tanzu-sync/app/config/custom-installs/dependent-resources-app.yaml
+++ b/clusters/cdd-demo-aws/tanzu-sync/app/config/custom-installs/dependent-resources-app.yaml
@@ -16,7 +16,7 @@ spec:
         url: #@ data.values.git.url
         subPath: #@ "{}/dependent-resources".format(data.values.git.sub_path.rsplit("/",1)[0])
         secretRef:
-          name: sync-git-auth
+          name: sync-git-ssh
   template:
     - sops:
         age:
