--- a/clusters/cdd-demo-aws/cluster-config/values/tap-install-values.yaml
+++ b/clusters/cdd-demo-aws/cluster-config/values/tap-install-values.yaml
@@ -1,5 +1,6 @@
 tap_install:
   version: 
     package_version: 1.6.0-rc.9
+    package_repo_bundle_tag: 1.6.0-rc.9
   package_repository:
     oci_repository: registry.tanzu.vmware.com/tanzu-application-platform/tap-packages
