--- a/clusters/cdd-demo-aws/cluster-config/values/tap-values.yaml
+++ b/clusters/cdd-demo-aws/cluster-config/values/tap-values.yaml
@@ -13,7 +13,7 @@ tap_install:
       image_registry:
         project_path: "gcr.io/pa-cdelashmutt/cdd-demo-tap/supply-chain"
       kubernetes_version: "1.25.9"
-    supply_chain: testing-scanning
+    supply_chain: testing_scanning
 
     accelerator:
       ingress:
