--- a/clusters/cdd-demo-aws/cluster-config/values/tap-values.yaml
+++ b/clusters/cdd-demo-aws/cluster-config/values/tap-values.yaml
@@ -15,6 +15,22 @@ tap_install:
       kubernetes_version: "1.25.9"
     supply_chain: testing_scanning
 
+    ootb_supply_chain_testing_scanning:
+      gitops:
+        server_address: https://github.com/
+        repository_owner: cdelashmutt-pivotal
+        branch: qa
+        username: supplychain
+        email: cdelashmutt+supplychain@vmware.com
+        commit_message: GitOps Commit for Supply Chain
+        ssh_secret: sync-git-ssh
+        commit_strategy: pull_request
+        pull_request:
+          server_kind: github
+          commit_branch: ""
+          pull_request_title: Delivery from Supply Chain
+          pull_request_body: This is a candidate release for promotion
+
     accelerator:
       ingress:
         include: true
