--- a/clusters/cdd-demo-aws/namespace-provisioner/testing-scanning-supplychain/git-auth-import.yaml
+++ b/clusters/cdd-demo-aws/namespace-provisioner/testing-scanning-supplychain/git-auth-import.yaml
@@ -1,6 +1,5 @@
 ---
-apiVersion: v1alpha1
-group: secretgen.carvel.dev
+apiVersion: secretgen.carvel.dev/v1alpha1
 kind: SecretImport
 metadata:
   name: sync-git-ssh
