Add push secret

--- a/clusters/cdd-demo-aws/cluster-config/values/tap-values.yaml
+++ b/clusters/cdd-demo-aws/cluster-config/values/tap-values.yaml
@@ -34,9 +34,9 @@ tap_install:
     local_source_proxy:
       repository: gcr.io/pa-cdelashmutt/cdd-demo-tap/source
       push_secret:
-        name: kp-default-repository-secret
-        namespace: build-service
-        create_export: true
+        name: push-secret
+        namespace: tap-install
+        create_export: false
 
     accelerator:
       ingress:
