--- a/clusters/cdd-demo-aws/dependent-resources/push-secret.sops.yaml
+++ b/clusters/cdd-demo-aws/dependent-resources/push-secret.sops.yaml
@@ -1,3 +1,5 @@
+#ENC[AES256_GCM,data:82k0V99rqLwvPoKdr8EKBs9SpxZfSXr/q7fLRIKJaA==,iv:jVLW0GpcB1JExnS2M/jGisQUDiY0DFLqefI4mxLIkJ4=,tag:obKH+pekjfmL72Qg3cCnUA==,type:comment]
+#ENC[AES256_GCM,data:orrvdoWbFwJElVAhWMDcWIsyc+NbKRVyN3ue,iv:/AE/R42C3OuAEepKmmNtAC5VVg0J3V8ha9V2aq6HtVc=,tag:Jq/kIKMVUwlAN8L5sd6ULQ==,type:comment]
 apiVersion: ENC[AES256_GCM,data:NZM=,iv:iSGWVtg28+I2tTgbw87CPwrtBql5Vn+jx97c0vMPv+Y=,tag:N0AdZMP6amIKaKAtIMNisg==,type:str]
 kind: ENC[AES256_GCM,data:HH3T7IVf,iv:vcvrtL7dFQ8r6/xRidVTmpsgoN93EExUsKzLWT2lwFw=,tag:N/K7VvhLukK8FaR27UHUjQ==,type:str]
 metadata:
@@ -20,7 +22,7 @@ data:
     #ENC[AES256_GCM,data:j/rwVW2tYqOPxppv1WAJjECSvMUFm90rzoGx17swIQQr19EqL3UHb1OGW/0n2E3ge/Amd/4Ry5avT+6ZnOL1/sXshe/zAQr4P46fI2PLGACBH2sealcfWJWU0iud6dhKudbZ/agNx6GB7QzB1g8E/6Kwpg8hvViVzLIq133VQPnLZ15ZrRyukXhEd6HPah8=,iv:1jTzzVt5nH1AdsusjPg6aHp4ahzd3S5bTrlbld2H2AQ=,tag:xY23yYbjwzBDlUtnSC2fnw==,type:comment]
     #ENC[AES256_GCM,data:k4KPPAnX/nxDvO2NezhjK/RGaFP6XdAi1DU3p1EKw7S70wqalWLoo3LZnGfAlUKZRlarRA==,iv:OOdE/+8zvi3/zvR4fvKQ5JAzg0fyegDq4oIm1VmvD+E=,tag:6sqX1GmZ4lT7R1P3BkKTOw==,type:comment]
     #ENC[AES256_GCM,data:r1Xf281zdkxj0vMcR5s=,iv:LTggLQNvYtt+b61YfAezPPH4/S0nrzjWzrv+Lc+A0XY=,tag:SVcQCn+f6VSqWVGg7g1yow==,type:comment]
-    #ENC[AES256_GCM,data:3/blJAPO2F7QfDD8n7+Tww==,iv:QeYGTx2yAUwNearaG8bUbtFmOH+eEumbZdHfEIdUeSY=,tag:K1rR7r7n4zmotsGVesnHfA==,type:comment]
+    #ENC[AES256_GCM,data:6Klana4=,iv:DlrcPV/0IquFCtr2bbVfU2NwQLv1+CA5fEc4VAaNC5g=,tag:IfhLqZICnRWUxee0Koiscw==,type:comment]
     #ENC[AES256_GCM,data:st0TTuE9aMv8Znv2n/CxQfe+4QgWAkzMw53DTKdQ5ZNOHviy6LhUONPf8K463I0ORkYtoA6gFssOWTvQeys9q+A=,iv:AfAWAOlOJyXN961PaKj8CcClLR4ZvEIn4y6I0nRQQPs=,tag:87IN9fNRgnD8kOetwp053w==,type:comment]
     #ENC[AES256_GCM,data:Ydl1th4JGqaeI/G/87RIMlmKlFoawUsaG2ezZ0tD/v/mFtJ7NY9t6SVR3yGJkA0DDfGswcq5yZ47f/rafye+ApxugvQhH9zr4oB7tXaPViQl+kI8HA==,iv:jIaFXkAqBTK6G6VwXrO5ABSOxMWxbydqT4hIEddC0jE=,tag:rHgPNqh9Aw8fPM8CpUqWfA==,type:comment]
     #ENC[AES256_GCM,data:PNSqx+Pvc+yG0tKnVVNJoLWj6WPGPsCWoev1Vtr6PuDIMplhEQE2BSUtTeo/9vzgdkCnqXvohxuWPbw3CaT2DNA=,iv:b0gcnv8rh2odPVOl3w89AfmA/dgdlwOQybu+9GA+hvo=,tag:AxTatTqUSRKTRiMTabytBw==,type:comment]
@@ -40,8 +42,8 @@ sops:
             aHlvazNuaERlYk1xNVFTSXNiNDR6bUkK+Sm3EgrozE9Eyj6Ggn4jKMf7c7sLDwiV
             ZeoU1MlEAmCIrGfR2ZTS7ZfEVX9RNA1tT4ewCuhvDcijD7PHYYNQpA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-06-26T18:38:11Z"
-    mac: ENC[AES256_GCM,data:JnnsErCGOZdXprDVYnWPzhVqwIdSMcPqb33HhoYiuxh4g/Oo/zGavwEmcIOVEEJsEmTIokFRPZkRz/UKDqpMvSJTxmDX/9lOHg3Y/UwtCYMX8dcXvD1WZ9txCKUz7LrKX24CHXCkeksaJuK75zhCojMF8lmE0fmcce/gbClNcUQ=,iv:srGsh2YF2SEzGitPtyrEfmCmhwkHEf8F6i6g0ZNFf6w=,tag:oZlFYwTxbbNj7hbpbKxOWw==,type:str]
+    lastmodified: "2023-06-26T18:41:07Z"
+    mac: ENC[AES256_GCM,data:q9mtXCmjt6yQs4X6+2SaJ4e76f3h/bXbdukISbP9JLW7TIJghcEhDBj5vd7NTarzo3n/l9Hev9ZKozG4qTSaggFld1HJCWqeu8KP0x8Dsg4E+KUZwK3PQBmB4jWW9ziIRFhekVAPFZ3tsGtwQRHOqHcfXqRjg+evsbKQnBNVrVI=,iv:Ci1dQvLc5CgEJcqvCH2YO0wQnfHhR3iHoMDhDOi2DAg=,tag:lR/f//VWBVj88YQC9wIjkQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
