Export the secret

--- a/clusters/cdd-demo-aws/dependent-resources/push-secret-export.yaml
+++ b/clusters/cdd-demo-aws/dependent-resources/push-secret-export.yaml
@@ -2,8 +2,8 @@
 apiVersion: secretgen.carvel.dev/v1alpha1
 kind: SecretExport
 metadata:
-  name: push-secret
-  namespace: tap-install
+  name: kp-default-repository-secret
+  namespace: build-service
 spec:
   toNamespaces: 
   - "*"
