--- a/clusters/cdd-demo-aws/cluster-config/values/tap-values.yaml
+++ b/clusters/cdd-demo-aws/cluster-config/values/tap-values.yaml
@@ -20,7 +20,7 @@ tap_install:
         server_address: https://github.com/
         repository_owner: cdelashmutt-pivotal
         repository_name: cdd-demo-gitops
-        branch: qa
+        branch: main
         username: supplychain
         email: cdelashmutt+supplychain@vmware.com
         commit_message: GitOps Commit for Supply Chain
