--- a/clusters/cdd-demo-aws/namespace-provisioner/testing-scanning-supplychain/git-auth-import.yaml
+++ b/clusters/cdd-demo-aws/namespace-provisioner/testing-scanning-supplychain/git-auth-import.yaml
@@ -3,5 +3,7 @@ apiVersion: secretgen.carvel.dev/v1alpha1
 kind: SecretImport
 metadata:
   name: git-auth
+  annotations:
+      tekton.dev/git-0: https://github.com
 spec:
   fromNamespace: tap-install
