Remove extra settings

--- a/clusters/cdd-demo-aws/cluster-config/values/tap-values.yaml
+++ b/clusters/cdd-demo-aws/cluster-config/values/tap-values.yaml
@@ -21,12 +21,10 @@ tap_install:
         repository_owner: cdelashmutt-pivotal
         repository_name: cdd-demo-gitops
         branch: qa
-        username: supplychain
-        email: cdelashmutt+supplychain@vmware.com
-        commit_message: GitOps Commit for Supply Chain
         commit_strategy: pull_request
         pull_request:
           server_kind: github
+          commit_branch: ""
           pull_request_title: Delivery from Supply Chain
           pull_request_body: This is a candidate release for promotion
 
