--- a/clusters/cdd-demo-aws/cluster-config/values/tap-values.yaml
+++ b/clusters/cdd-demo-aws/cluster-config/values/tap-values.yaml
@@ -20,11 +20,11 @@ tap_install:
         server_address: https://github.com
         repository_owner: cdelashmutt-pivotal
         repository_name: cdd-demo-gitops
-        branch: main
+        branch: qa
         commit_strategy: pull_request
         pull_request:
           server_kind: github
-          commit_branch: qa
+          commit_branch: main
           pull_request_title: Delivery from Supply Chain
           pull_request_body: This is a candidate release for promotion
 
