--- a/clusters/cdd-demo-aws/cluster-config/values/tap-values.yaml
+++ b/clusters/cdd-demo-aws/cluster-config/values/tap-values.yaml
@@ -23,6 +23,7 @@ tap_install:
         commit_strategy: pull_request
         pull_request:
           server_kind: github
+          commit_branch: supply_chain
           pull_request_title: Delivery from Supply Chain
           pull_request_body: This is a candidate release for promotion
 
