Try adding region to defaults

--- a/clusters/cdd-demo-aws/cluster-config/values/tap-values.yaml
+++ b/clusters/cdd-demo-aws/cluster-config/values/tap-values.yaml
@@ -82,6 +82,9 @@ tap_install:
         namespace: default
         secretName: default-cert
       app_config:
+        aws:
+          accountDefaults:
+            region: us-east-2
         app:
           baseUrl: https://tap-gui.aws-work.grogscave.net
         auth:
