--- a/clusters/cdd-demo-aws/cluster-config/values/tap-values.yaml
+++ b/clusters/cdd-demo-aws/cluster-config/values/tap-values.yaml
@@ -85,6 +85,7 @@ tap_install:
         aws:
           accountDefaults:
             region: us-east-2
+            roleName: arn:aws:iam::537807987484:role/cdd-demo-aws-backstage
         app:
           baseUrl: https://tap-gui.aws-work.grogscave.net
         auth:
@@ -103,8 +104,6 @@ tap_install:
               bucketName: 'cdd-demo-aws-techdocs'
               accountId: '537807987484'
               region: 'us-east-2'
-              credentials:
-                roleArn: 'arn:aws:iam::537807987484:role/cdd-demo-aws-backstage'
     metadata_store:
       ns_for_export_app_cert: "*"
       app_service_type: ClusterIP
