Export different secret

--- a/clusters/cdd-demo-aws/cluster-config/values/tap-values.yaml
+++ b/clusters/cdd-demo-aws/cluster-config/values/tap-values.yaml
@@ -30,8 +30,8 @@ tap_install:
     local_source_proxy:
       repository: gcr.io/pa-cdelashmutt/cdd-demo-tap/source
       push_secret:
-        name: push-secret
-        namespace: tap-install
+        name: kp-default-repository-secret
+        namespace: build-service
         create_export: false
 
     accelerator:
