--- a/clusters/cdd-demo-aws/namespace-provisioner/testing-scanning-supplychain/scanpolicy-grype.yaml
+++ b/clusters/cdd-demo-aws/namespace-provisioner/testing-scanning-supplychain/scanpolicy-grype.yaml
@@ -18,7 +18,7 @@ spec:
     package main
     # Accepted Values: "Critical", "High", "Medium", "Low", "Negligible", "UnknownSeverity"
     notAllowedSeverities := ["Critical", "High", "UnknownSeverity"]
-    ignoreCves := ["GHSA-36p3-wjmg-h94x", "CVE-2023-21930", "GHSA-mjmj-j48q-9wg2", "CVE-2023-20860"]
+    ignoreCves := ["GHSA-36p3-wjmg-h94x", "CVE-2023-21930", "GHSA-mjmj-j48q-9wg2", "CVE-2023-20860", "CVE-2023-35116"]
     contains(array, elem) = true {
       array[_] = elem
     } else = false { true }
