--- a/clusters/cdd-demo-aws/cluster-config/values/tap-values.yaml
+++ b/clusters/cdd-demo-aws/cluster-config/values/tap-values.yaml
@@ -92,6 +92,10 @@ tap_install:
               target: https://github.com/cdelashmutt-pivotal/demo-clusters-tap/blob/main/clusters/cdd-demo-aws/backstage-catalog/catalog-info.yaml
             - type: url
               target: https://github.com/tsalm-vmware/spring-cloud-demo-tap/blob/main/tap/catalog/catalog-info.yaml
+            - type: url
+              target: https://github.com/cdelashmutt-pivotal/java-rest-service/blob/main/catalog/catalog-info.yaml
+            - type: url
+              target: https://github.com/cdelashmutt-pivotal/weatherforecast-steeltoe/blob/main/catalog/catalog-info.yaml
         techdocs:
           builder: 'external'
           publisher:
