--- a/clusters/cdd-demo-aws/dependent-resources/qa-app.yaml
+++ b/clusters/cdd-demo-aws/dependent-resources/qa-app.yaml
@@ -10,5 +10,7 @@ spec:
     - git:
         url: https://github.com/cdelashmutt-pivotal/cdd-demo-gitops
         ref: qa
+  template:
+    - ytt: {}
   deploy:
     - kapp: {}
