--- a/clusters/cdd-demo-aws/dependent-resources/qa-app.yaml
+++ b/clusters/cdd-demo-aws/dependent-resources/qa-app.yaml
@@ -10,6 +10,22 @@ spec:
     - git:
         url: https://github.com/cdelashmutt-pivotal/cdd-demo-gitops
         ref: qa
+    - inline:                                                                                                                                                                                                                                     
+        paths:                                                                                                                                                                                                                                    
+          config.yml: |                                                                                                                                                                                                                           
+            ---                                                                                                                                                                                                                                   
+            apiVersion: kapp.k14s.io/v1alpha1                                                                                                                                                                                                     
+            kind: Config                                                                                                                                                                                                                          
+            rebaseRules:                                                                                                                                                                                                                          
+              - path: [metadata, annotations, serving.knative.dev/creator]                                                                                                                                                                        
+                type: copy                                                                                                                                                                                                                        
+                sources: [new, existing]                                                                                                                                                                                                          
+                resourceMatchers: &matchers                                                                                                                                                                                                       
+                  - apiVersionKindMatcher: {apiVersion: serving.knative.dev/v1, kind: Service}                                                                                                                                                    
+              - path: [metadata, annotations, serving.knative.dev/lastModifier]                                                                                                                                                                   
+                type: copy                                                                                                                                                                                                                        
+                sources: [new, existing]                                                                                                                                                                                                          
+                resourceMatchers: *matchers                                                                                                                                                                                                       
   template:
     - ytt: {}
   deploy:
