Update sso offering

--- a/clusters/cdd-demo-aws/dependent-resources/app-sso-auth-server.sops.yaml
+++ b/clusters/cdd-demo-aws/dependent-resources/app-sso-auth-server.sops.yaml
@@ -17,8 +17,8 @@ sops:
             Y1NBOTBSOWZ6NUFWTkZxTkw3UUNINWcKIIDSUmtENgmsR1dLuR7zCavV7hpO5+Uc
             2myhTfr47k11jRHRYNsdon0PJjo1Jxy2uSL77fBlwmVoq6REImj7GQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-06-27T17:59:49Z"
-    mac: ENC[AES256_GCM,data:rCigmIvItOWLxfbEs0iNoj9KM/DvFBCh2HmR4k0SFL4JFWJDbIUMIaZ1slc9f6AyjrMd33YvbZTW8OMQ6goh5DN4fc36aT+FCMv6n5WJIo82pB8UP7jHc1GjHatwFArD8E1ZubNJECYYM9D3Nh4192QCpPJW8pq9gv8AE7o5TzU=,iv:Vxntq8G/FaUE5hfuwj3QRQmkREa7EnFxW+2DYg21Lko=,tag:GHwxpyLP/qLwzuDUjxn9Jw==,type:str]
+    lastmodified: "2023-06-28T01:43:04Z"
+    mac: ENC[AES256_GCM,data:WeJ/sD2ckSoNdrFNToniLV6Fy3h6sTkOtMEPrsB+EtsgrKOjAl0aCd841pRjHGdKt5Ucl0RMCtGjA+ueLjjzecv6K8I6f1KzGCenMWWQH0u0GH2DM7pEvHoIWM7uYBPwJN7gf2bZI0Tp5bu2Izx9REgAraNIl/PJo407v5MOBgM=,iv:mPenJaUVrG6NbUO6EwU+fQIfMA2Ch2LAdfwdwbAagZ0=,tag:b/KYGnLNo7Oc3iFaGxaNRg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
@@ -27,7 +27,7 @@ apiVersion: ENC[AES256_GCM,data:kcwwGSyt1pOVPSrrZVHI5zAYfJvyHemWwV2gNhc=,iv:n+Vn
 kind: ENC[AES256_GCM,data:QCT9kWDw+Df2fAkh,iv:/rjFEad/6F5wVJlG5cqtm73ypk03zq6IuguGAOvY+cM=,tag:6k7NODUxtNR1ee7E0kHcnw==,type:str]
 metadata:
     name: ENC[AES256_GCM,data:/cAqw7rTSXNVLiWv,iv:2jHy43OHNEFEQj6CMq+Xj7b3fDE4yb9U/CAbMEOE/ZA=,tag:WV2v+Sjro8GyEXNNMkpW8g==,type:str]
-    namespace: ENC[AES256_GCM,data:Ov/+iijB9Zu59xf3RRE=,iv:UfR5P7GXfeqvHvwvshJ4gAcsaUCRGWdYk45TFlxIs1E=,tag:XW0G1jbm9lqmIPMEbxwAUw==,type:str]
+    namespace: ENC[AES256_GCM,data:jEywzEcYJ6WJ3haIrcs=,iv:gGrsjrkt8DHCAT1Vq0oQ1JiKnT9RKT6qQqJcRiRlIwU=,tag:/+dP16UcEkIJudheDMgEsg==,type:str]
 spec:
     fromNamespace: ENC[AES256_GCM,data:yWQBSiMKgw==,iv:Om0m9abLkTC454bnH18/8ysE/+NMw4wp9HaDeEFMiAg=,tag:zxuPa5G+hpBKKCIlHZNrfg==,type:str]
 sops:
@@ -45,17 +45,17 @@ sops:
             Y1NBOTBSOWZ6NUFWTkZxTkw3UUNINWcKIIDSUmtENgmsR1dLuR7zCavV7hpO5+Uc
             2myhTfr47k11jRHRYNsdon0PJjo1Jxy2uSL77fBlwmVoq6REImj7GQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-06-27T17:59:49Z"
-    mac: ENC[AES256_GCM,data:rCigmIvItOWLxfbEs0iNoj9KM/DvFBCh2HmR4k0SFL4JFWJDbIUMIaZ1slc9f6AyjrMd33YvbZTW8OMQ6goh5DN4fc36aT+FCMv6n5WJIo82pB8UP7jHc1GjHatwFArD8E1ZubNJECYYM9D3Nh4192QCpPJW8pq9gv8AE7o5TzU=,iv:Vxntq8G/FaUE5hfuwj3QRQmkREa7EnFxW+2DYg21Lko=,tag:GHwxpyLP/qLwzuDUjxn9Jw==,type:str]
+    lastmodified: "2023-06-28T01:43:04Z"
+    mac: ENC[AES256_GCM,data:WeJ/sD2ckSoNdrFNToniLV6Fy3h6sTkOtMEPrsB+EtsgrKOjAl0aCd841pRjHGdKt5Ucl0RMCtGjA+ueLjjzecv6K8I6f1KzGCenMWWQH0u0GH2DM7pEvHoIWM7uYBPwJN7gf2bZI0Tp5bu2Izx9REgAraNIl/PJo407v5MOBgM=,iv:mPenJaUVrG6NbUO6EwU+fQIfMA2Ch2LAdfwdwbAagZ0=,tag:b/KYGnLNo7Oc3iFaGxaNRg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
 ---
-apiVersion: ENC[AES256_GCM,data:Q90SacVeX2ZNUTQIwtoaWvqZr+8BF/BevF9zaD0+OsSM/w==,iv:k7A5YHr0XV82o0Wwhp8Bj0lXwyHuocCMwppR+h7pqRI=,tag:aQ7UMu9XNdFWrz3jtiZGCg==,type:str]
+apiVersion: ENC[AES256_GCM,data:9xK5V7THTR2c/IIsr1Vz4LWcOHQ7JGnjO90q23x9dh+/RQ==,iv:de0OTHKPNAlLAm0JSBhwd6+hrkByQ1NoPdsUpiWwDfo=,tag:iADKCav1i27ZRvaATle9qg==,type:str]
 kind: ENC[AES256_GCM,data:p5paClHSh1sQDg==,iv:zRyXeZuK7y+xCvdr6EXm/oTvT46vt5+ZXyAOJ44YBDE=,tag:dJI1TOXztEx8+lsvbt9lkw==,type:str]
 metadata:
     name: ENC[AES256_GCM,data:AlCqm0bzE6k=,iv:OZQI93v4oJwJONYBsZc4Mov+4LTynskkqagGL0fWzv0=,tag:llac8XhOeOB9rYCrICrPoQ==,type:str]
-    namespace: ENC[AES256_GCM,data:JeZeBW7H8tTY26fuzJg=,iv:u4zXFhrwIuzQ27wWE8Oo6xGRwu6Sb0U+yMI8c8xa5cg=,tag:JYVXD/KZDgFrqzL3SxDzhw==,type:str]
+    namespace: ENC[AES256_GCM,data:jEywzEcYJ6WJ3haIrcs=,iv:gGrsjrkt8DHCAT1Vq0oQ1JiKnT9RKT6qQqJcRiRlIwU=,tag:/+dP16UcEkIJudheDMgEsg==,type:str]
     annotations:
         sso.apps.tanzu.vmware.com/allow-unsafe-identity-provider: ""
     labels:
@@ -93,8 +93,8 @@ sops:
             Y1NBOTBSOWZ6NUFWTkZxTkw3UUNINWcKIIDSUmtENgmsR1dLuR7zCavV7hpO5+Uc
             2myhTfr47k11jRHRYNsdon0PJjo1Jxy2uSL77fBlwmVoq6REImj7GQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-06-27T17:59:49Z"
-    mac: ENC[AES256_GCM,data:rCigmIvItOWLxfbEs0iNoj9KM/DvFBCh2HmR4k0SFL4JFWJDbIUMIaZ1slc9f6AyjrMd33YvbZTW8OMQ6goh5DN4fc36aT+FCMv6n5WJIo82pB8UP7jHc1GjHatwFArD8E1ZubNJECYYM9D3Nh4192QCpPJW8pq9gv8AE7o5TzU=,iv:Vxntq8G/FaUE5hfuwj3QRQmkREa7EnFxW+2DYg21Lko=,tag:GHwxpyLP/qLwzuDUjxn9Jw==,type:str]
+    lastmodified: "2023-06-28T01:43:04Z"
+    mac: ENC[AES256_GCM,data:WeJ/sD2ckSoNdrFNToniLV6Fy3h6sTkOtMEPrsB+EtsgrKOjAl0aCd841pRjHGdKt5Ucl0RMCtGjA+ueLjjzecv6K8I6f1KzGCenMWWQH0u0GH2DM7pEvHoIWM7uYBPwJN7gf2bZI0Tp5bu2Izx9REgAraNIl/PJo407v5MOBgM=,iv:mPenJaUVrG6NbUO6EwU+fQIfMA2Ch2LAdfwdwbAagZ0=,tag:b/KYGnLNo7Oc3iFaGxaNRg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
@@ -125,8 +125,8 @@ sops:
             Y1NBOTBSOWZ6NUFWTkZxTkw3UUNINWcKIIDSUmtENgmsR1dLuR7zCavV7hpO5+Uc
             2myhTfr47k11jRHRYNsdon0PJjo1Jxy2uSL77fBlwmVoq6REImj7GQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-06-27T17:59:49Z"
-    mac: ENC[AES256_GCM,data:rCigmIvItOWLxfbEs0iNoj9KM/DvFBCh2HmR4k0SFL4JFWJDbIUMIaZ1slc9f6AyjrMd33YvbZTW8OMQ6goh5DN4fc36aT+FCMv6n5WJIo82pB8UP7jHc1GjHatwFArD8E1ZubNJECYYM9D3Nh4192QCpPJW8pq9gv8AE7o5TzU=,iv:Vxntq8G/FaUE5hfuwj3QRQmkREa7EnFxW+2DYg21Lko=,tag:GHwxpyLP/qLwzuDUjxn9Jw==,type:str]
+    lastmodified: "2023-06-28T01:43:04Z"
+    mac: ENC[AES256_GCM,data:WeJ/sD2ckSoNdrFNToniLV6Fy3h6sTkOtMEPrsB+EtsgrKOjAl0aCd841pRjHGdKt5Ucl0RMCtGjA+ueLjjzecv6K8I6f1KzGCenMWWQH0u0GH2DM7pEvHoIWM7uYBPwJN7gf2bZI0Tp5bu2Izx9REgAraNIl/PJo407v5MOBgM=,iv:mPenJaUVrG6NbUO6EwU+fQIfMA2Ch2LAdfwdwbAagZ0=,tag:b/KYGnLNo7Oc3iFaGxaNRg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
@@ -137,9 +137,10 @@ metadata:
     name: ENC[AES256_GCM,data:VX4q,iv:SwVUgR6B6H4Hk1F52b6CWkqGq6Zwy40T6QfZ9kAombs=,tag:CVxDJrZdTamW2DCUQCF3yA==,type:str]
 spec:
     base:
-        authServerSelector:
-            matchLabels:
-                env: ENC[AES256_GCM,data:yHsu,iv:eKU+4gGpD9Rl7jbVjdYrQErlynk5iQLlJWNTs+C3ADs=,tag:DCppdgtiPQuo8yeKsHhy3w==,type:str]
+        spec:
+            authServerSelector:
+                matchLabels:
+                    env: ENC[AES256_GCM,data:Ld6D,iv:oXZ54auf6OMJcFmoBu5yjCk/oKKUKeOWRGG9RjCclpc=,tag:ia4zMYx9yiHsUA38wo5/XA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -155,8 +156,8 @@ sops:
             Y1NBOTBSOWZ6NUFWTkZxTkw3UUNINWcKIIDSUmtENgmsR1dLuR7zCavV7hpO5+Uc
             2myhTfr47k11jRHRYNsdon0PJjo1Jxy2uSL77fBlwmVoq6REImj7GQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-06-27T17:59:49Z"
-    mac: ENC[AES256_GCM,data:rCigmIvItOWLxfbEs0iNoj9KM/DvFBCh2HmR4k0SFL4JFWJDbIUMIaZ1slc9f6AyjrMd33YvbZTW8OMQ6goh5DN4fc36aT+FCMv6n5WJIo82pB8UP7jHc1GjHatwFArD8E1ZubNJECYYM9D3Nh4192QCpPJW8pq9gv8AE7o5TzU=,iv:Vxntq8G/FaUE5hfuwj3QRQmkREa7EnFxW+2DYg21Lko=,tag:GHwxpyLP/qLwzuDUjxn9Jw==,type:str]
+    lastmodified: "2023-06-28T01:43:04Z"
+    mac: ENC[AES256_GCM,data:WeJ/sD2ckSoNdrFNToniLV6Fy3h6sTkOtMEPrsB+EtsgrKOjAl0aCd841pRjHGdKt5Ucl0RMCtGjA+ueLjjzecv6K8I6f1KzGCenMWWQH0u0GH2DM7pEvHoIWM7uYBPwJN7gf2bZI0Tp5bu2Izx9REgAraNIl/PJo407v5MOBgM=,iv:mPenJaUVrG6NbUO6EwU+fQIfMA2Ch2LAdfwdwbAagZ0=,tag:b/KYGnLNo7Oc3iFaGxaNRg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
