Workloads and SSO

--- a/clusters/cdd-demo-aws/dependent-resources/app-sso-auth-server.sops.yaml
+++ b/clusters/cdd-demo-aws/dependent-resources/app-sso-auth-server.sops.yaml
@@ -17,8 +17,8 @@ sops:
             Y1NBOTBSOWZ6NUFWTkZxTkw3UUNINWcKIIDSUmtENgmsR1dLuR7zCavV7hpO5+Uc
             2myhTfr47k11jRHRYNsdon0PJjo1Jxy2uSL77fBlwmVoq6REImj7GQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-06-28T01:43:04Z"
-    mac: ENC[AES256_GCM,data:WeJ/sD2ckSoNdrFNToniLV6Fy3h6sTkOtMEPrsB+EtsgrKOjAl0aCd841pRjHGdKt5Ucl0RMCtGjA+ueLjjzecv6K8I6f1KzGCenMWWQH0u0GH2DM7pEvHoIWM7uYBPwJN7gf2bZI0Tp5bu2Izx9REgAraNIl/PJo407v5MOBgM=,iv:mPenJaUVrG6NbUO6EwU+fQIfMA2Ch2LAdfwdwbAagZ0=,tag:b/KYGnLNo7Oc3iFaGxaNRg==,type:str]
+    lastmodified: "2023-06-28T02:13:34Z"
+    mac: ENC[AES256_GCM,data:utf6nC8WDRPaCK5DgIf7s9LRB45288yZn0g1DsA7ocvc2A9kbt3bOwox37jrxleStpklYYBylOVyASb3no+ql/vi1Id4Rzah0ZlXSr3pEZ+wgkURMPE/uS4BuhZtvye1TpwE2OXAM0w0hkN4/Pai4SxCCmAEfrBpZitAqyDZJ6c=,iv:PFffj6k4z948U2VbEnypkU2W29FRibGLIlIlUpFZdmM=,tag:C20N0egZyZoQ3beGMU2IZw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
@@ -45,8 +45,8 @@ sops:
             Y1NBOTBSOWZ6NUFWTkZxTkw3UUNINWcKIIDSUmtENgmsR1dLuR7zCavV7hpO5+Uc
             2myhTfr47k11jRHRYNsdon0PJjo1Jxy2uSL77fBlwmVoq6REImj7GQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-06-28T01:43:04Z"
-    mac: ENC[AES256_GCM,data:WeJ/sD2ckSoNdrFNToniLV6Fy3h6sTkOtMEPrsB+EtsgrKOjAl0aCd841pRjHGdKt5Ucl0RMCtGjA+ueLjjzecv6K8I6f1KzGCenMWWQH0u0GH2DM7pEvHoIWM7uYBPwJN7gf2bZI0Tp5bu2Izx9REgAraNIl/PJo407v5MOBgM=,iv:mPenJaUVrG6NbUO6EwU+fQIfMA2Ch2LAdfwdwbAagZ0=,tag:b/KYGnLNo7Oc3iFaGxaNRg==,type:str]
+    lastmodified: "2023-06-28T02:13:34Z"
+    mac: ENC[AES256_GCM,data:utf6nC8WDRPaCK5DgIf7s9LRB45288yZn0g1DsA7ocvc2A9kbt3bOwox37jrxleStpklYYBylOVyASb3no+ql/vi1Id4Rzah0ZlXSr3pEZ+wgkURMPE/uS4BuhZtvye1TpwE2OXAM0w0hkN4/Pai4SxCCmAEfrBpZitAqyDZJ6c=,iv:PFffj6k4z948U2VbEnypkU2W29FRibGLIlIlUpFZdmM=,tag:C20N0egZyZoQ3beGMU2IZw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
@@ -93,8 +93,8 @@ sops:
             Y1NBOTBSOWZ6NUFWTkZxTkw3UUNINWcKIIDSUmtENgmsR1dLuR7zCavV7hpO5+Uc
             2myhTfr47k11jRHRYNsdon0PJjo1Jxy2uSL77fBlwmVoq6REImj7GQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-06-28T01:43:04Z"
-    mac: ENC[AES256_GCM,data:WeJ/sD2ckSoNdrFNToniLV6Fy3h6sTkOtMEPrsB+EtsgrKOjAl0aCd841pRjHGdKt5Ucl0RMCtGjA+ueLjjzecv6K8I6f1KzGCenMWWQH0u0GH2DM7pEvHoIWM7uYBPwJN7gf2bZI0Tp5bu2Izx9REgAraNIl/PJo407v5MOBgM=,iv:mPenJaUVrG6NbUO6EwU+fQIfMA2Ch2LAdfwdwbAagZ0=,tag:b/KYGnLNo7Oc3iFaGxaNRg==,type:str]
+    lastmodified: "2023-06-28T02:13:34Z"
+    mac: ENC[AES256_GCM,data:utf6nC8WDRPaCK5DgIf7s9LRB45288yZn0g1DsA7ocvc2A9kbt3bOwox37jrxleStpklYYBylOVyASb3no+ql/vi1Id4Rzah0ZlXSr3pEZ+wgkURMPE/uS4BuhZtvye1TpwE2OXAM0w0hkN4/Pai4SxCCmAEfrBpZitAqyDZJ6c=,iv:PFffj6k4z948U2VbEnypkU2W29FRibGLIlIlUpFZdmM=,tag:C20N0egZyZoQ3beGMU2IZw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
@@ -125,8 +125,8 @@ sops:
             Y1NBOTBSOWZ6NUFWTkZxTkw3UUNINWcKIIDSUmtENgmsR1dLuR7zCavV7hpO5+Uc
             2myhTfr47k11jRHRYNsdon0PJjo1Jxy2uSL77fBlwmVoq6REImj7GQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-06-28T01:43:04Z"
-    mac: ENC[AES256_GCM,data:WeJ/sD2ckSoNdrFNToniLV6Fy3h6sTkOtMEPrsB+EtsgrKOjAl0aCd841pRjHGdKt5Ucl0RMCtGjA+ueLjjzecv6K8I6f1KzGCenMWWQH0u0GH2DM7pEvHoIWM7uYBPwJN7gf2bZI0Tp5bu2Izx9REgAraNIl/PJo407v5MOBgM=,iv:mPenJaUVrG6NbUO6EwU+fQIfMA2Ch2LAdfwdwbAagZ0=,tag:b/KYGnLNo7Oc3iFaGxaNRg==,type:str]
+    lastmodified: "2023-06-28T02:13:34Z"
+    mac: ENC[AES256_GCM,data:utf6nC8WDRPaCK5DgIf7s9LRB45288yZn0g1DsA7ocvc2A9kbt3bOwox37jrxleStpklYYBylOVyASb3no+ql/vi1Id4Rzah0ZlXSr3pEZ+wgkURMPE/uS4BuhZtvye1TpwE2OXAM0w0hkN4/Pai4SxCCmAEfrBpZitAqyDZJ6c=,iv:PFffj6k4z948U2VbEnypkU2W29FRibGLIlIlUpFZdmM=,tag:C20N0egZyZoQ3beGMU2IZw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
@@ -138,6 +138,7 @@ metadata:
 spec:
     base:
         spec:
+            workloadDomainTemplate: ENC[AES256_GCM,data:KDXi1eF8REgq/jPU4YUzVkpMxruE8wNLzQvoWYmsS6tSlQbP,iv:+czlJ/ptwtBL3CPtKDUkxKQ8f5JDHHP2ba4F51AUKJI=,tag:dWAPzo5rfwkRPD5jvWo8fQ==,type:str]
             authServerSelector:
                 matchLabels:
                     env: ENC[AES256_GCM,data:Ld6D,iv:oXZ54auf6OMJcFmoBu5yjCk/oKKUKeOWRGG9RjCclpc=,tag:ia4zMYx9yiHsUA38wo5/XA==,type:str]
@@ -156,8 +157,8 @@ sops:
             Y1NBOTBSOWZ6NUFWTkZxTkw3UUNINWcKIIDSUmtENgmsR1dLuR7zCavV7hpO5+Uc
             2myhTfr47k11jRHRYNsdon0PJjo1Jxy2uSL77fBlwmVoq6REImj7GQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-06-28T01:43:04Z"
-    mac: ENC[AES256_GCM,data:WeJ/sD2ckSoNdrFNToniLV6Fy3h6sTkOtMEPrsB+EtsgrKOjAl0aCd841pRjHGdKt5Ucl0RMCtGjA+ueLjjzecv6K8I6f1KzGCenMWWQH0u0GH2DM7pEvHoIWM7uYBPwJN7gf2bZI0Tp5bu2Izx9REgAraNIl/PJo407v5MOBgM=,iv:mPenJaUVrG6NbUO6EwU+fQIfMA2Ch2LAdfwdwbAagZ0=,tag:b/KYGnLNo7Oc3iFaGxaNRg==,type:str]
+    lastmodified: "2023-06-28T02:13:34Z"
+    mac: ENC[AES256_GCM,data:utf6nC8WDRPaCK5DgIf7s9LRB45288yZn0g1DsA7ocvc2A9kbt3bOwox37jrxleStpklYYBylOVyASb3no+ql/vi1Id4Rzah0ZlXSr3pEZ+wgkURMPE/uS4BuhZtvye1TpwE2OXAM0w0hkN4/Pai4SxCCmAEfrBpZitAqyDZJ6c=,iv:PFffj6k4z948U2VbEnypkU2W29FRibGLIlIlUpFZdmM=,tag:C20N0egZyZoQ3beGMU2IZw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
