Add in AppSSO Catalog

--- a/clusters/cdd-demo-aws/cluster-config/values/tap-values.yaml
+++ b/clusters/cdd-demo-aws/cluster-config/values/tap-values.yaml
@@ -100,6 +100,8 @@ tap_install:
               target: https://github.com/cdelashmutt-pivotal/java-rest-service/blob/main/catalog/catalog-info.yaml
             - type: url
               target: https://github.com/cdelashmutt-pivotal/weatherforecast-steeltoe/blob/main/catalog/catalog-info.yaml
+            - type: url
+              target: https://github.com/cdelashmutt-pivotal/appsso-starter-java/blob/main/catalog/catalog-info.yaml
         kubernetes:                                                                                                                                                                                                                                   
           serviceLocatorMethod:                                                                                                                                                                                                                       
             type: multiTenant                                                                                                                                                                                                                         
