--- a/clusters/cdd-demo-aws/dependent-resources/dev/weatherforecast-steeltoe.yaml
+++ b/clusters/cdd-demo-aws/dependent-resources/dev/weatherforecast-steeltoe.yaml
@@ -1,31 +1,31 @@
-apiVersion: carto.run/v1alpha1                                                                                                                                                                                                                  
-kind: Workload                                                                                                                                                                                                                                  
-metadata:                                                                                                                                                                                                                                       
-  labels:                                                                                                                                                                                                                                       
-    apis.apps.tanzu.vmware.com/register-api: "true"                                                                                                                                                                                             
-    app.kubernetes.io/part-of: weatherforecast-steeltoe                                                                                                                                                                                         
-    apps.tanzu.vmware.com/has-tests: "true"                                                                                                                                                                                                     
-    apps.tanzu.vmware.com/workload-type: web                                                                                                                                                                                                    
-    tanzu.app.live.view: "true"                                                                                                                                                                                                                 
-    tanzu.app.live.view.application.flavours: steeltoe                                                                                                                                                                                          
-    tanzu.app.live.view.application.name: weatherforecast-steeltoe                                                                                                                                                                              
-  name: weatherforecast-steeltoe                                                                                                                                                                                                                
-  namespace: dev                                                                                                                                                                                                                                
-spec:                                                                                                                                                                                                                                           
-  params:                                                                                                                                                                                                                                       
-  - name: annotations                                                                                                                                                                                                                           
-    value:                                                                                                                                                                                                                                      
-      autoscaling.knative.dev/minScale: "1"                                                                                                                                                                                                     
-  - name: api_descriptor                                                                                                                                                                                                                        
-    value:                                                                                                                                                                                                                                      
-      description: Weather report management                                                                                                                                                                                                    
-      location:                                                                                                                                                                                                                                 
-        path: /swagger                                                                                                                                                                                                                          
-      owner: weather-department                                                                                                                                                                                                                 
-      system: weather                                                                                                                                                                                                                           
-      type: openapi                                                                                                                                                                                                                             
-  source:                                                                                                                                                                                                                                       
-    git:                                                                                                                                                                                                                                        
-      ref:                                                                                                                                                                                                                                      
-        branch: main                                                                                                                                                                                                                            
+apiVersion: carto.run/v1alpha1
+kind: Workload
+metadata:
+  labels:
+    apis.apps.tanzu.vmware.com/register-api: "true"
+    app.kubernetes.io/part-of: weatherforecast-steeltoe
+    apps.tanzu.vmware.com/has-tests: "true"
+    apps.tanzu.vmware.com/workload-type: web
+    tanzu.app.live.view: "true"
+    tanzu.app.live.view.application.flavours: steeltoe
+    tanzu.app.live.view.application.name: weatherforecast-steeltoe
+  name: weatherforecast-steeltoe
+  namespace: dev
+spec:
+  params:
+    - name: annotations
+      value:
+        autoscaling.knative.dev/minScale: "1"
+    - name: api_descriptor
+      value:
+        description: Weather report management
+        location:
+          path: /swagger/v1/swagger.json
+        owner: weather-department
+        system: weather
+        type: openapi
+  source:
+    git:
+      ref:
+        branch: main
       url: https://github.com/cdelashmutt-pivotal/weatherforecast-steeltoe
